# Lime

./: .gitignore  AGENTS.md  Makefile  README.md  RELEASE_NOTES.md  WhatNeedsToBeBuilt  create-test.mgx  demo_writer.py  example.html  install-linux.sh  install-macos.sh  install-windows.ps1  memory.json  prompts.lock.json  prompts.toml  pyproject.toml  test.mgx  test1.mgx  thing.py  versions.json
.github/workflows/: build-github-release.yml
0.1.0/: 404.html  index.html
0.1.0/Coming soon/: index.html
0.1.0/Conditionals/: index.html
0.1.0/Context Management/: index.html
0.1.0/Custom Tools/: index.html
0.1.0/Function Calls/: index.html
0.1.0/Getting started/: index.html
0.1.0/Including Margarita Files/: index.html
0.1.0/Loops/: index.html
0.1.0/Memory/: index.html
0.1.0/Prompt Locking/: index.html
0.1.0/Promt Locking/: index.html
0.1.0/Running the Agent/: index.html
0.1.0/State/: index.html
0.1.0/search/: search_index.json
0.1.3/: objects.inv
0.1.3/Conditionals/: index.html
0.1.3/Function Calls/: index.html
0.1.3/Prompt Locking/: index.html
0.1.3/State/: index.html
0.1.3/search/: search_index.json
0.1.4/Coming soon/: index.html
0.1.4/Logging/: index.html
0.1.5/Loops/: index.html
0.1.5/Running the Agent/: index.html
0.1.9/: index.html
0.1.9/Conditionals/: index.html
0.1.9/Custom Tools/: index.html
0.1.9/Function Calls/: index.html
0.1.9/Including Margarita Files/: index.html
0.1.9/Memory/: index.html
0.1.9/Prompt Locking/: index.html
0.1.9/State/: index.html
0.1.9/search/: search_index.json
docs/: hooks.py  mkdocs.yml
docs/examples/: README.md  effect-input-example.mgx
docs/lexers/: lime_lexer.py
docs/pages/: Coming soon.md  Conditionals.md  Context Management.md  Custom Tools.md  Function Calls.md  Getting started.md  Including Margarita Files.md  Logging.md  Loops.md  Memory.md  Prompt Locking.md  Running the Agent.md  State.md  User Input.md  index.md
docs/site/: 404.html  index.html
examples/plan-implement/: pi.mgx
examples/ralph/: tasks.py
prompts/: salt.json  setup.md  setup.mg
prompts/salt/: explain-tool.mgx  math.mgx  math.py  tool.mgx
src/app/: cli.py  config.py  container.py  lifecycle.py
temp/: report.md
test/: test_execute_headless.py
ui/: dev.mjs  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  (+4 more)
(+172 files in other folders)
