[project]
name = "lime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "github-copilot-sdk>=0.1.23",
    "margarita>=0.3.5",
    "rich>=13.7.0",
    "wireup>=2.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
