[project]
name = "lime-ai"
version = "0.1.5"
description = "Lime AI — An agentic markdown runner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "github-copilot-sdk==0.1.29",
    "margarita>=0.3.8",
    "rich>=13.7.0",
    "textual>=0.80.0",
    "wireup>=2.6.0",
]

[project.scripts]
lime = "lime_ai.app.cli:cli"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["lime"]

[tool.pytest.ini_options]
pythonpath = ["src"]
